<resources>
    <string name="app_name">Scavenger Hunt</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="user_email">user email</string>
    <string name="logout">logout</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="dont_have_an_account">don\'t have an account? click here</string>
    <string name="Register">Register</string>
    <string name="already_registered_sign_in_here">Already registered? click here to sign in</string>
    <string name="welcome">welcome</string>
    <string name="create_task">Side Task</string>
    <string name="map">Map</string>
    <string name="list_of_landmarks">List of landmarks</string>
    <string name="total_walked_area">Total Walked Area</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="log_out">Log Out</string>
    <string name="start_the_game">Start the game</string>
    <string name="info">information</string>
    <string name="ready_to_explore_the_city">Ready to explore the city?</string>
    <string name="key2">spk2</string>
</resources>
