<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sample.maris.scavengerhunt.LoginActivity"
    android:background="@color/colorPrimaryDark">

    <RelativeLayout
        android:id="@+id/lin1"
        android:layout_width="368dp"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <ImageView
            android:id="@+id/imgLogoLogin"
            android:layout_width="130dp"
            android:layout_height="160dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_logo" />

        <TextView
            android:id="@+id/tvLog"
            android:text="@string/login"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:layout_below="@id/imgLogoLogin"/>

        <EditText
            android:id="@+id/editTextEmail"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_margin="15dp"
            android:text="maris@maris.net"
            android:layout_below="@id/tvLog"
            android:background="@drawable/rounded_ed"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/editTextPass"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_margin="15dp"
            android:text="pass123"
            android:layout_below="@id/editTextEmail"
            android:background="@drawable/rounded_ed"
            android:padding="10dp"/>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_margin="15dp"
            android:layout_below="@id/editTextPass"
            android:textAllCaps="false"/>

        <TextView
            android:id="@+id/tv1"
            android:text="@string/dont_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginBtn"
            android:textColor="#ffffff"/>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
