<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sample.maris.scavengerhunt.RegisterActivity"
    android:background="@color/colorPrimaryDark">

    <RelativeLayout
        android:id="@+id/lin1"
        android:layout_width="368dp"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <ImageView
            android:id="@+id/imgRegLogo"
            android:layout_width="130dp"
            android:layout_height="160dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_logo"  />

        <TextView
            android:id="@+id/tvReg"
            android:text="@string/Register"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgRegLogo"
            android:textColor="#ffffff"/>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvReg"
            android:layout_margin="15dp"
            android:background="@drawable/rounded_ed"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            />

        <EditText
            android:id="@+id/editTextPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextEmail"
            android:layout_margin="15dp"
            android:background="@drawable/rounded_ed"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"/>

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Register"
            android:layout_margin="15dp"
            android:layout_below="@id/editTextPass"
            android:textAllCaps="false"/>

        <TextView
            android:id="@+id/tv1"
            android:text="@string/already_registered_sign_in_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/registerBtn"
            android:textColor="#ffffff"/>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
